--- a/parents/shilo/coding.html
+++ b/parents/shilo/coding.html
@@ -23,6 +23,22 @@
           <li><a>Experaments</a></li>
         </ul>
     </div>
+    <div class="side_bar">
+        <ul>
+          <li><a custom="run_away">Run Away</a></li>
+          <li><a custom="fibonachi">fibonachi</a></li>
+          <li><a custom="calculater">calculator</a></li>
+        </ul>
+    </div>
+    <div class="main_screen run_away">
+        run away
+    </div>
+    <div class="main_screen fibonachi">
+        fibonachi
+    </div>
+    <div class="main_screen calculater">
+        calculater
+    </div>
   <script src="script.js"></script>
 </body>
 </html>
