--- a/parents/shilo/coding.html
+++ b/parents/shilo/coding.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <script src="js/jquery-3.1.1.min.js"></script>
+  <script src="js/jquery.form.min.js"></script>
   <title>Gilor Web Page</title>
   <link rel="stylesheet" href="styles.css">
 
@@ -31,7 +32,8 @@
         </ul>
     </div>
     <div class="main_screen run_away">
-        run away
+        <h1>run away</h1>
+        <button id="runnning">Run</button>
     </div>
     <div class="main_screen fibonachi">
         fibonachi
